# aiWebBot

./: .gitignore  BUILD_STANDALONE.md  DISTRIBUTION_OPTIONS.md  INSTALL_WINDOWS.md  README.md  README_STANDALONE.md  build_standalone.py  build_standalone_gui.py  create_distribution.bat  create_standalone_package.bat  install_playwright_browsers.bat  launcher.bat  launcher_no_gui.bat  plan.md  prd.md  pyproject.toml  requirements.txt  setup_windows.bat  test_config_formats.py  test_grok.py  test_gui_integration.py  test_username_fill.py
config/: my_config.json  sample_config.json  system_prompts.txt
src/: __init__.py
src/aiwebbot/: __init__.py  bot.py  config.py  gui.py  main.py  prompts.py
tests/: __init__.py  conftest.py  test_bot.py  test_config.py
